test/fail/enums_and_variants/variant_early_close.lily
#[
SyntaxError: Unexpected token 'a label'.
    from variant_early_close.lily:11:
]#

enum Object {
    Value,
    ObjList(Object...)
}

ObjList(ObjList() ObjList())
